# cleancensus

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  README.md  ages.ipynb  census.ipynb  config.example.toml  config_e2e.toml  data_prep.ipynb  extend_topics.py  gender.ipynb  harmonization.py  new_topics.py  other_binned_data.ipynb  overlays.ipynb  paths.py  pyproject.toml  sanity_extend.py  tenure_v3.py
cleancensus/: ages_stage.py  cli.py  config.py  destatis_csv.py  enrich.py  gemeinde_controls.py  gemeinde_stage.py  gender_stage.py  harmonization.py  ingest_totals.py  logsetup.py  names.py  pipeline.py  progress.py  report.py  sanity.py  stages.py  tenure.py  topics.py  topics8.py  vacancy.py  z22.py
docs/: AGES_GATE_REPORT.md  CONFIG.md  DATA.md  GEMEINDE_CONTROLS.md  GENDER_GATE_REPORT.md  METHOD.md  RAW_DOWNLOAD.md  Z22_GATE_REPORT.md
docs/superpowers/plans/: 2026-06-10-harmonize-building-and-extra-topics.md  2026-06-11-destatis-csv-supplement.md  2026-06-11-vacancy-derived-topic.md  2026-06-13-pipeline-polish.md
notebooks_archive/: ARCHIVE_README.md  ages.ipynb
tests/: test_cli.py  test_config.py  test_dedup.py  test_destatis_csv.py  test_enrich.py  test_gemeinde_controls.py  test_gemeinde_gender.py  test_harmonization.py  test_logsetup.py  test_names.py  test_new_topics.py  test_pipeline.py  test_progress.py  test_report.py  test_stages.py  test_topics8.py  test_totals_ages.py  test_vacancy.py  test_z22.py
tools/: download_zensus_grid.py  equivalence_zgb.py  make_attribute_gallery.py  make_hero_figure.py  zensus_grid_manifest.toml
(+2 files in other folders)
