[project]
name = "cleancensus"
version = "1.0.0"
description = "Harmonization of German Zensus 2022 grid data into consistent multi-scale cell tables for synthetic population generation"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "chainsolvers>=0.1.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.11.0",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
cleancensus = "cleancensus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
